Baeva theory abridged

--- a/text/ch2-zvp.tex
+++ b/text/ch2-zvp.tex
@@ -54,7 +54,7 @@ Using Equation \ref{eq:zvp-energy_invariant}, $U = \gamma m_\mathrm{e} c^2$ and 
 	\gamma^2 = 1 + (a_0 + \sin\theta\cos\theta)^2 + \left(\frac{p_\mathrm{prop}}{m_\mathrm{e}c}\right)^2,
 \end{equation}
 where all parameters are in the boosted frame. Using $\mathbf{p} = \gamma m_\mathrm{e} \mathbf{v}$, the longitudinal velocity is
-\begin{equation}
+\begin{equation}\label{eq:zvp-vprop}
 	v_\mathrm{prop} = \frac{\tilde{p}_\mathrm{prop}c}{\sqrt{1 + (a_0 + \sin\theta\cos\theta)^2 + \tilde{p}^2_\mathrm{prop}}},
 \end{equation}
 where $\tilde{p}_\mathrm{prop} = p_\mathrm{prop}/m_\mathrm{e}c$. Thus, should the transverse vector potential pass through $-\sin\theta\cos\theta$, zero for normal incidence, the surface can propagate towards the laser pulse at very close to speed $c$. Transforming back to the laboratory frame, at the peak of ablation ($\mathbf{u}\approx -c\hat{\mathbf{x}}$) and using the equations for relativistic velocity addition,
