GEMINI chapter begins

--- a/Oxford_Thesis.tex
+++ b/Oxford_Thesis.tex
@@ -206,6 +206,7 @@
 \include{text/ch1-intro}
 \include{text/ch2-zvp}
 \include{text/ch3-orion}
+\include{text/ch4-gemini}
 \include{text/chx-misc}
 
 % TODO Add publications and contributions
